# Linux-FaceRecognition-FaceLivenessDetection

./: README.md
FaceSDK-Lite/: Dockerfile  install.sh  readme.txt  run_demo.sh
FaceSDK-Lite-Demo/: README.md  license.txt
FaceSDK-Lite-Demo/cpp_demo/: CMakeLists.txt  faceengine.h  main.cpp
FaceSDK-Lite/flask/: app.py
FaceSDK-Lite/gradio/: app.py
Identification(1:N)-Demo/: README.md  download.txt
Identification-Demo/: README.md
LivenessDetection/: install.sh  license.txt  readme.txt
LivenessDetection-Demo/: Dockerfile  README.md  run_demo.sh
LivenessDetection-Demo/dependency/openvino/: libgna.so.2  libgna.so.3.0.0.1455
LivenessDetection-Demo/flask/: app.py
LivenessDetection-Demo/gradio/: app.py
LivenessDetection/dependency/: libimutils.so_for_ubuntu22
LivenessDetection/dependency/openvino/: pcie-ma2x8x.mvcmd  usb-ma2x8x.mvcmd
LivenessDetection/flask/: app.py
Recognition/: Dockerfile
Recognition-Demo/: README.md  license.txt  readme.txt
Recognition-Demo/flask/: app.py
Recognition-Demo/gradio/: app.py
Recognition/dependency/openvino/: plugins.xml
